[package]
name = "htpc-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
egui-wlr-layer = { git = "https://github.com/darkwater/egui-wlr-layer" }
# egui-wlr-layer = { path = "../downloads/egui-wlr-layer/" }

chrono     = "0.4.41"
egui       = "0.31.1"
gilrs      = "0.11.0"
serde      = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[patch.crates-io]
egui   = { git = "https://github.com/darkwater/egui", branch = "focus_direction_0.31" }
epaint = { git = "https://github.com/darkwater/egui", branch = "focus_direction_0.31" }
